--- a/app/views/job_posts/show.html.erb
+++ b/app/views/job_posts/show.html.erb
@@ -28,7 +28,7 @@
 <% else %>
   To apply you must, <%= link_to "Sign Up", new_user_registration_path %> or <%= link_to "Sign In", new_user_session_path %> |
 <% end %>
-<%= link_to 'Back', job_posts_path %>
+<%= link_to 'Back to Posts', job_posts_path %>
 
 
 
