--- a/app/views/job_responses/index.html.erb
+++ b/app/views/job_responses/index.html.erb
@@ -1,24 +1,21 @@
-<h2>Job Response</h2>
+<h2>Job Response for <%=@job_post.title%></h2>
 
 <table>
   <tr>
-    <th> user</th>
-    <th>Job post</th>
+    <th>Name</th>
     <th>Email</th>
     <th>Response</th>
-    <th>Resume</th>
-    <th></th>
+    <th>Date</th>
     <th></th>
     <th></th>
   </tr>
 
 <% @job_responses.each do |job_response| %>
   <tr>
-    <td><%= job_response. user_id %></td>
-    <td><%= job_response.job_post_id %></td>
-    <td><%= job_response.email %></td>
-    <td><%= job_response.response %></td>
-    <td><%= job_response.resume %></td>
+    <td><%= job_response.user.name %></td>
+    <td><%= job_response.user.email %></td>
+    <td><%= job_response.response[0..50] %></td>
+    <td><%= job_response.updated_at %></td>
     <td><%= link_to 'Show', job_response %></td>
     <td><%= link_to 'Destroy', job_response, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
@@ -26,3 +23,5 @@
 </table>
 
 <br />
+
+<%= link_to 'Back to Post', job_post_path(@job_post) %>
