--- a/app/views/job_posts/edit.html.erb
+++ b/app/views/job_posts/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @job_post %> |
-<%= link_to 'Back', job_posts_path %>
+<%= link_to 'Back to Posts', job_posts_path %>
