--- a/app/views/job_posts/index.html.erb
+++ b/app/views/job_posts/index.html.erb
@@ -1,38 +1,42 @@
 <h2>Job Posts</h2>
 
-<table>
-  <tr>
-    <th>Title</th>
-    <th>Company</th>
-    <th>Date</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
+<% if @job_posts.size > 0 %>
+  <table>
+    <tr>
+      <th>Title</th>
+      <th>Company</th>
+      <th>Date</th>
+      <th></th>
+      <th></th>
+      <th></th>
+    </tr>
 
-<% @job_posts.each do |job_post| %>
-  <tr>
-    <td><%= job_post.title %></td>
-    <td><%= job_post.company %></td>
-    <td><%= job_post.updated_at %></td>
-    <td><%= link_to 'Show', job_post %></td>
-    <% if can? :modify, job_post %>
-      <td><%= link_to 'Edit', edit_job_post_path(job_post) %></td>
-      <td><%= link_to 'Destroy', job_post, :confirm => 'Are you sure?', :method => :delete %></td>
-    <% else %>
-      <th></th>
-      <th></th>
-    <% end %>
-  </tr>
+  <% @job_posts.each do |job_post| %>
+    <tr>
+      <td><%= job_post.title %></td>
+      <td><%= job_post.company %></td>
+      <td><%= job_post.updated_at %></td>
+      <td><%= link_to 'Show', job_post %></td>
+      <% if can? :modify, job_post %>
+        <td><%= link_to 'Edit', edit_job_post_path(job_post) %></td>
+        <td><%= link_to 'Destroy', job_post, :confirm => 'Are you sure?', :method => :delete %></td>
+      <% else %>
+        <th></th>
+        <th></th>
+      <% end %>
+    </tr>
+  <% end %>
+  </table>
+<% else %>
+  <p>There are no jobs posted at this time.</p>
 <% end %>
-</table>
 
 <br />
 
 <% if can?(:create, JobPost) %>
   <%= link_to 'New Job Post', new_job_post_path %>
 <% else %>
-  To apply you must, <%= link_to "Sign Up", new_user_registration_path %> or <%= link_to "Sign In", new_user_session_path %>
+  To post jobs you must, <%= link_to "Sign Up", new_user_registration_path %> or <%= link_to "Sign In", new_user_session_path %>
 <% end %>
 
 
