--- a/app/views/job_responses/index.html.erb
+++ b/app/views/job_responses/index.html.erb
@@ -1,26 +1,30 @@
 <h2>Job Response for <%=@job_post.title%></h2>
 
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Email</th>
-    <th>Response</th>
-    <th>Date</th>
-    <th></th>
-    <th></th>
-  </tr>
+<% if @job_responses.size > 0 %>
+  <table>
+    <tr>
+      <th>Name</th>
+      <th>Email</th>
+      <th>Response</th>
+      <th>Date</th>
+      <th></th>
+      <th></th>
+    </tr>
 
-<% @job_responses.each do |job_response| %>
-  <tr>
-    <td><%= job_response.user.name %></td>
-    <td><%= job_response.user.email %></td>
-    <td><%= job_response.response[0..50] %></td>
-    <td><%= job_response.updated_at %></td>
-    <td><%= link_to 'Show', job_response %></td>
-    <td><%= link_to 'Destroy', job_response, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
+  <% @job_responses.each do |job_response| %>
+    <tr>
+      <td><%= job_response.user.name %></td>
+      <td><%= job_response.user.email %></td>
+      <td><%= job_response.response[0..50] %></td>
+      <td><%= job_response.updated_at %></td>
+      <td><%= link_to 'Show', job_response %></td>
+      <td><%= link_to 'Destroy', job_response, :confirm => 'Are you sure?', :method => :delete %></td>
+    </tr>
+  <% end %>
+  </table>
+<% else %>
+  <p>There are no responses to this job.</p>
 <% end %>
-</table>
 
 <br />
 
